--- a/Shared/Web/indexHTML/index.html
+++ b/Shared/Web/indexHTML/index.html
@@ -10,10 +10,37 @@
       background-image: url('blind-driving.gif');
       background-size: cover;
       background-position: center; 
+      text-align: center; 
+      color: white; 
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      margin-top: 20%;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
   <h1>E QUE FIH!</h1>
+  <button onclick="openCacti()">Cacti</button>
+
+  <script>
+    function openCacti() {
+      // Redirects to the /cacti route
+      window.location.href = '/cacti';
+    }
+  </script>
 </body>
 </html>
